--- a/config.json
+++ b/config.json
@@ -1,5 +1,5 @@
 {
-  "url": "https://www.notion.so/b6fcf809ca5047b89f423948dce013a0?v=03ddc4d6130a47f8b68e74c9d0061de2",
+  "url": "https://water-crab-db4.notion.site/a7b59c328dc444d08c50ef2a2ea3a5be?v=295ddb2b00314a16967b5f0e1aa717b7&pvs=4",
   "theme": "pure-ejs",
   "previewBrowser": "/usr/bin/chromium",
   "autoSlug": true
